// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Elements/Avatar Default smoke-test 1`] = `
<div class="main-section antialiased relative font-nunito text-sm font-normal vertical full ltr">
  <div class="h-20 w-20 overflow-hidden relative flex justify-center items-center text-center text-2xl">
    <img class="w-full h-full object-cover rounded-full"
         src="https://html.vristo.sbthemes.com/assets/images/profile-12.jpeg"
         alt="User avatar"
    >
    <span class="absolute ltr:right-0 rtl:left-0 w-7 h-7 ring-2 ring-white dark:ring-white-dark bottom-0 rounded-full bg-success">
    </span>
  </div>
</div>
`;

exports[`Elements/Avatar FullyRoundedAvatar smoke-test 1`] = `
<div class="main-section antialiased relative font-nunito text-sm font-normal vertical full ltr">
  <div class="h-20 w-20 overflow-hidden relative flex justify-center items-center text-center text-2xl">
    <img class="w-full h-full object-cover rounded-full"
         src="https://html.vristo.sbthemes.com/assets/images/profile-12.jpeg"
         alt="User avatar"
    >
    <span class="absolute ltr:right-0 rtl:left-0 w-7 h-7 ring-2 ring-white dark:ring-white-dark bottom-0 rounded-full bg-success">
    </span>
  </div>
</div>
`;

exports[`Elements/Avatar SlightlyRoundedAvatar smoke-test 1`] = `
<div class="main-section antialiased relative font-nunito text-sm font-normal vertical full ltr">
  <div class="h-20 w-20 overflow-hidden relative flex justify-center items-center text-center text-2xl">
    <img class="w-full h-full object-cover rounded-sm"
         src="https://html.vristo.sbthemes.com/assets/images/profile-12.jpeg"
         alt="User avatar"
    >
    <span class="absolute ltr:right-0 rtl:left-0 w-7 h-7 ring-2 ring-white dark:ring-white-dark bottom-0 rounded-full bg-success">
    </span>
  </div>
</div>
`;

exports[`Elements/Avatar SquareAvatar smoke-test 1`] = `
<div class="main-section antialiased relative font-nunito text-sm font-normal vertical full ltr">
  <div class="h-20 w-20 overflow-hidden relative flex justify-center items-center text-center text-2xl">
    <img class="w-full h-full object-cover rounded-none"
         src="https://html.vristo.sbthemes.com/assets/images/profile-12.jpeg"
         alt="User avatar"
    >
    <span class="absolute ltr:right-0 rtl:left-0 w-7 h-7 ring-2 ring-white dark:ring-white-dark bottom-0 rounded-full bg-success">
    </span>
  </div>
</div>
`;

exports[`Elements/Avatar WithAwayStatus smoke-test 1`] = `
<div class="main-section antialiased relative font-nunito text-sm font-normal vertical full ltr">
  <div class="h-20 w-20 overflow-hidden relative flex justify-center items-center text-center text-2xl">
    <img class="w-full h-full object-cover rounded-full"
         src="https://html.vristo.sbthemes.com/assets/images/profile-12.jpeg"
         alt="User avatar"
    >
    <span class="absolute ltr:right-0 rtl:left-0 w-7 h-7 ring-2 ring-white dark:ring-white-dark bottom-0 rounded-full bg-warning">
    </span>
  </div>
</div>
`;

exports[`Elements/Avatar WithBusyStatus smoke-test 1`] = `
<div class="main-section antialiased relative font-nunito text-sm font-normal vertical full ltr">
  <div class="h-20 w-20 overflow-hidden relative flex justify-center items-center text-center text-2xl">
    <img class="w-full h-full object-cover rounded-full"
         src="https://html.vristo.sbthemes.com/assets/images/profile-12.jpeg"
         alt="User avatar"
    >
    <span class="absolute ltr:right-0 rtl:left-0 w-7 h-7 ring-2 ring-white dark:ring-white-dark bottom-0 rounded-full bg-danger">
    </span>
  </div>
</div>
`;

exports[`Elements/Avatar WithOfflineStatus smoke-test 1`] = `
<div class="main-section antialiased relative font-nunito text-sm font-normal vertical full ltr">
  <div class="h-20 w-20 overflow-hidden relative flex justify-center items-center text-center text-2xl">
    <img class="w-full h-full object-cover rounded-full"
         src="https://html.vristo.sbthemes.com/assets/images/profile-12.jpeg"
         alt="User avatar"
    >
    <span class="absolute ltr:right-0 rtl:left-0 w-7 h-7 ring-2 ring-white dark:ring-white-dark bottom-0 rounded-full bg-secondary">
    </span>
  </div>
</div>
`;

exports[`Elements/Avatar WithOnlineStatus smoke-test 1`] = `
<div class="main-section antialiased relative font-nunito text-sm font-normal vertical full ltr">
  <div class="h-20 w-20 overflow-hidden relative flex justify-center items-center text-center text-2xl">
    <img class="w-full h-full object-cover rounded-full"
         src="https://html.vristo.sbthemes.com/assets/images/profile-12.jpeg"
         alt="User avatar"
    >
    <span class="absolute ltr:right-0 rtl:left-0 w-7 h-7 ring-2 ring-white dark:ring-white-dark bottom-0 rounded-full bg-success">
    </span>
  </div>
</div>
`;
